Corregido al momenot de seleccionar los checbox ya se marcan

--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -3,6 +3,9 @@
     <external-files-path
         name="my_images"
         path="Pictures" />
+    <external-files-path
+        name="pdfs"
+        path="." />
     <cache-path
         name="cached_images"
         path="." />
